Actions
Bug #14871
closedMinGW Compile Error 63758
Bug #14871:
MinGW Compile Error 63758
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.6.0dev (2018-06-27 trunk 63758) [x64-mingw32]
Description
Just had a compile error running ruby-loco, probably due to 63758
compiling ../ruby/signal.c
../ruby/signal.c: In function 'rb_grantpt':
../ruby/signal.c:1591:34: error: expected expression before 'int'
#define grantpt(fd) fake_grantfd(int)
^
../ruby/signal.c:1591:34: note: in definition of macro 'grantpt'
#define grantpt(fd) fake_grantfd(int)
^~~
../ruby/signal.c:1591:34: error: expected expression before 'int'
#define grantpt(fd) fake_grantfd(int)
^
../ruby/signal.c:1591:34: note: in definition of macro 'grantpt'
#define grantpt(fd) fake_grantfd(int)
^~~
make: *** [Makefile:397: signal.o] Error 1
make: *** Waiting for unfinished jobs....
==> ERROR: A failure occurred in build().
Aborting...
Command exited with code 1
url is https://ci.appveyor.com/project/MSP-Greg/ruby-loco/build/876
ruby 2.6.0dev (2018-06-27 trunk 63757) [x64-mingw32] build green
Updated by MSP-Greg (Greg L) about 8 years ago
- Subject changed from MinGw Compile Error 63758 to MinGW Compile Error 63758
Updated by normalperson (Eric Wong) about 8 years ago
- Status changed from Open to Closed
Applied in changeset trunk|r63762.
signal.c: fix braino in fake_grantfd
[Bug #14871]
Is neon down? I missed ruby-core notifications on this.
Actions